# filtshopbot

./: README.md  banwords  pyproject.toml
src/filtshopbot/: __init__.py  main.py
