[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "filtshopbot"
description = "Bot for filtering messages with invites to shops"
readme = "README.md"
version = "v1.0.0"
dependencies = ["discord.py"]
authors = [{name = "Nakidai", email = "plaza521@inbox.ru"}]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
filtshopbot = "filtshopbot:main"
